feat: add workflow_dispatch for manual trigger

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -6,6 +6,7 @@ on:
     tags: [ 'v*' ]
   pull_request:
     branches: [ main ]
+  workflow_dispatch:  # 允许手动触发
 
 env:
   # Docker Hub 配置 (替换为你的用户名)
