--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,7 +6,7 @@ python-multipart>=0.0.6
 aiofiles>=23.2.1
 jinja2>=3.1.3
 python-jose[cryptography]>=3.3.0
-bcrypt>=4.0.0
+bcrypt==4.0.1
 passlib>=1.7.4
 aiosqlite>=0.19.0
 websockets>=12.0
