feat: Add download task management UI, backend logic, and configurable export path.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - SECRET_KEY=${SECRET_KEY:-change-this-secret-key}
       - ADMIN_USERNAME=${ADMIN_USERNAME:-admin}
       - ADMIN_PASSWORD=${ADMIN_PASSWORD:-}
+      - EXPORT_DIR=/downloads
       - API_ID=${API_ID:-}
       - API_HASH=${API_HASH:-}
       - BOT_TOKEN=${BOT_TOKEN:-}
