--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     environment:
       - TZ=Asia/Shanghai
       - DEBUG=false
+      - LOG_LEVEL=${LOG_LEVEL:-DEBUG}
       - WEB_HOST=0.0.0.0
       - WEB_PORT=9528
       - SECRET_KEY=${SECRET_KEY:-change-this-secret-key}
