--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - API_ID=${API_ID:-}
       - API_HASH=${API_HASH:-}
       - BOT_TOKEN=${BOT_TOKEN:-}
+      - USE_IPV6=${USE_IPV6:-false}
       - TDL_CONTAINER_NAME=${TDL_CONTAINER_NAME:-tdl}
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://localhost:8080/health" ]
